--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <!-- ЭКСПЕРТНЫЙ РЕЖИМ НАЧАЛО -->
-        <div id="calcExpert" class="d-none">
+        <div id="calcExpert">
             <div class="d-flex position-relative mb-4">
                 <button class="btn btn-primary rounded-end-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasTree" aria-controls="offcanvasTree" style="width: 58px;">
                     <i class="fa-solid fa-folder-tree"></i>
@@ -795,7 +795,7 @@
 
 
         <!-- ПРОСТОЙ РЕЖИМ НАЧАЛО -->
-        <div id="calcSimple" >
+        <div id="calcSimple" class="d-none">
             <div class="d-flex position-relative mb-4">
                 <button class="btn btn-primary rounded-end-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCategories" aria-controls="offcanvasCategories">Категории</button>
                 <form class="flex-fill position-relative" action="#">
