--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
                     <button type="button" class="btn btn-primary w-100 p-3 mb-4">Рассчитать</button>
 
                     <div class="mb-4">
-                        <div class="h6 mb-4"><i class="fa-solid fa-coins text-secondary me-1"></i> Уплаты таможенных платежей</div>
+                        <div class="h6 mb-4 text-center"><i class="fa-solid fa-coins text-secondary me-1"></i> Уплаты таможенных платежей</div>
 
                         <div class="meter" style="--percent-duty: 5; --percent-fee: 10; --percent-tax: 15; --percent-vat: 20;--percent-disposal: 50;">
                             <div class="meter-duty"></div>
