--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="py-2 bg-light border-bottom">
-        <div class="container d-flex align-items-center justify-content-between">
+        <div class="container-fluid d-flex align-items-center justify-content-between">
             <a class="link-secondary text-decoration-none d-flex align-items-center gap-3" href="index.html">
                 <img src="img/gold_soft_logo.svg" alt="Gold Soft" style="height: 36px;">
                 <span class="small">Таможенный <br>
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-    <div class="container py-4">
+    <div class="container-fluid py-4">
         <div class="bg-light p-3 rounded-3 mb-4">
             <div class="form-check form-switch d-flex align-items-center justify-content-between ps-0">
                 <label class="form-check-label" for="flexSwitchCheckMode">Экспертный режим</label>
